--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,17 +2,16 @@ DATABASE_URL="mysql://root:docker@localhost:3308/sinka_test_db"
 
 PORT=3333
 
-API_NAME="sinka-test"
+API_NAME="Teste Sinka Frontend"
 API_VERSION=1.0.0
-API_URL='https://api.sinka.com.br'
+API_URL='http://localhost:3333'
 
 MYSQL_VERSION=8.0
 MYSQL_TYPE=mysql
-MYSQL_PORT=3308   
+MYSQL_PORT=3308
 MYSQL_LOG=true
 
 MYSQL_HOST=localhost
 MYSQL_DATABASE=sinka_test_db
 MYSQL_USER=docker
 MYSQL_PASSWORD=docker
-
