--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
         "date-fns": "^4.1.0",
         "fastify": "5.2.0",
         "glob": "^11.0.0",
+        "nestjs-zod": "^4.2.1",
         "nodemailer": "^6.9.16",
         "reflect-metadata": "0.1.12",
         "rimraf": "^6.0.1",
